Blogs Section Dark Mode fixed

--- a/src/styles/Blogs.module.css
+++ b/src/styles/Blogs.module.css
@@ -4,7 +4,6 @@
   overflow: hidden;
 }
 .blogContainer:hover {
-  box-shadow: 0 5px 25px #cacaca;
   transition: 0.5s ease-in-out;
   cursor: pointer;
   border-radius: 5px;
@@ -17,10 +16,6 @@
 .blogContainer:hover .blogTitle {
   color: #d53f34;
   transition: 0.5s ease-in-out;
-}
-
-.blogContainer:hover .blogDescripton {
-  color: #191f2d;
 }
 
 .blogCommentIcon {
